clusters/base/infrastructure/traefik/traefik-config/catchall-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
 name: redirect-to-https
 namespace: traefik
spec:
 redirectScheme:
   scheme: https
   permanent: true

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: http-catchall
 namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`*`)
      priority: 1
      kind: Rule
      middlewares:
      - name: redirect-to-https
      services:
       - kind: TraefikService
         name: noop@internal
